--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
           <img src="./to-do-list.png" alt="Error" class="img" />
           <h2>To-Do-List</h2>
         </div>
-        <span id="output"></span>
-        <footer>
-          <input type="text" name="list" id="task" />
+        <br />
+        <div class="footer">
+          <input type="text" name="list" placeholder="Add Task..." id="task" />
           <button class="btn">+</button>
-        </footer>
+        </div>
+        <span id="output"></span>
       </div>
     </div>
     <script src="script.js"></script>
